# Cannon

./: .gitignore  README.md
Assembly/: Assembly.docx
BOM/: bom.xlsx
Cannon sensor integration_files/: saved_resource.html
Design/PCB/CannonPCB/: CannonPCB.kicad_pcb  CannonPCB.kicad_prl  CannonPCB.kicad_pro  CannonPCB.kicad_sch  Waveshare.kicad_sym
Design/Source/: CMakeLists.txt  sdkconfig  sdkconfig.old
Design/Source/components/AlchemyEscape/: CMakeLists.txt
Design/Source/components/AlchemyEscape/als31300/: als31300.cpp
Design/Source/components/AlchemyEscape/als31300/include/: als31300.h
Design/Source/components/AlchemyEscape/i2c/: i2c.cpp
Design/Source/components/AlchemyEscape/i2c/include/: i2c.h
Design/Source/components/AlchemyEscape/pins/: pins.cpp
Design/Source/components/AlchemyEscape/pins/include/: pins.h
Design/Source/components/AlchemyEscape/time/: time.cpp
Design/Source/components/AlchemyEscape/time/include/: time.h
Design/Source/components/AlchemyEscape/vl53l0x/: vl53l0x.cpp
Design/Source/components/AlchemyEscape/vl53l0x/core/src/: vl53l0x_api.cpp
Design/Source/components/AlchemyEscape/vl53l0x/include/: CMakeLists.txt  vl53l0x.h
Design/Source/components/AlchemyEscape/vl6180x/: VL6180X.cpp
Design/Source/components/AlchemyEscape/vl6180x/inc/: VL6180X.h  VL6180X_defs.h
Design/Source/components/AlchemyEscape/wrapper/: Arduino.cpp  Wire.cpp
Design/Source/components/AlchemyEscape/wrapper/include/: Arduino.h  Wire.h
Design/Source/main/: CMakeLists.txt  cannon.cpp  cannon.h  cannon_mqtt.h  (+7 more)
Documentation/: ~$HallSensorWiring.pptx
(+3 files in other folders)
